# ts-ue4dumper

./: README.md  dump.txt  package-lock.json  package.json
frida-agent/: tsconfig.json
frida-agent/agent/: dump.ts  index.ts  offset.ts  struct.ts  utils.ts
utils/: CMakeLists.txt  GAME.cpp  GAME.h  main.cpp
utils/FField/: FField.cpp  FField.h
utils/FName/: FName.cpp  FName.h
utils/FNameEntry/: FNameEntry.cpp  FNameEntry.h
utils/FNameEntryAllocator/: FNameEntryAllocator.h
utils/FNamePool/: FNamePool.cpp  FNamePool.h
utils/FProperty/: FProperty.cpp  FProperty.h
utils/FString/: FString.h
utils/FUObjectArray/: FUObjectArray.cpp  FUObjectArray.h
utils/FUObjectItem/: FUObjectItem.cpp  FUObjectItem.h
utils/TArray/: TArray.h
utils/TUObjectArray/: TUObjectArray.cpp  TUObjectArray.h
utils/UClass/: UClass.h
utils/UEnum/: UEnum.cpp  UEnum.h
utils/UField/: UField.cpp  UField.h
utils/UFunction/: UFunction.cpp  UFunction.h
utils/UGameInstance/: UGameInstance.cpp  UGameInstance.h
utils/ULevel/: ULevel.cpp  ULevel.h
utils/ULocalPlayer/: ULocalPlayer.cpp  ULocalPlayer.h
utils/UObject/: UObject.cpp  UObject.h
utils/UStruct/: UStruct.cpp  UStruct.h
utils/UWorld/: UWorld.cpp  UWorld.h
utils/XProperties/: XProperties.h
